; ModuleID = '/home/carl/AnghaBench/linux/net/sched/extr_cls_flow.c_flow_get_proto_src.c'
source_filename = "/home/carl/AnghaBench/linux/net/sched/extr_cls_flow.c_flow_get_proto_src.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.flow_keys = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.flow_keys*)* @flow_get_proto_src to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flow_get_proto_src(%struct.sk_buff* %0, %struct.flow_keys* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.flow_keys*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.flow_keys* %1, %struct.flow_keys** %5, align 8
  %6 = load %struct.flow_keys*, %struct.flow_keys** %5, align 8
  %7 = getelementptr inbounds %struct.flow_keys, %struct.flow_keys* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load %struct.flow_keys*, %struct.flow_keys** %5, align 8
  %13 = getelementptr inbounds %struct.flow_keys, %struct.flow_keys* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @ntohs(i32 %15)
  store i32 %16, i32* %3, align 4
  br label %22

17:                                               ; preds = %2
  %18 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %19 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @addr_fold(i32 %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %17, %11
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @ntohs(i32) #1

declare dso_local i32 @addr_fold(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
